--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "type": "git",
     "url": "git+https://github.com/carlfahl/fullStackBears.git"
   },
-  "author": "",
+  "author": "Carl A. Fahlstrom",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/carlfahl/fullStackBears/issues"
   },
-  "homepage": "https://github.com/carlfahl/fullStackBears#readme"
+  "homepage": "https://github.com/carlfahl/fullStackBears#readme",
+  "dependencies": {
+    "express": "^4.14.1"
+  }
 }
